{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 37,
  "lineage": "c8b36472-dc9b-8944-1a97-1a4801819c64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09229ba270b817f2f",
            "arn": "arn:aws:ec2:eu-central-1:904053120350:elastic-ip/eipalloc-09229ba270b817f2f",
            "association_id": "eipassoc-0a086970d2dde3717",
            "domain": "vpc",
            "id": "eipalloc-09229ba270b817f2f",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0787136e0047df5e6",
            "private_dns": "ip-10-0-0-111.eu-central-1.compute.internal",
            "private_ip": "10.0.0.111",
            "public_dns": "ec2-63-183-56-241.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.183.56.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dopamin-shop-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-nat-eip",
              "Project": "dopamin-shop"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:internet-gateway/igw-0b82ed425804d271f",
            "id": "igw-0b82ed425804d271f",
            "owner_id": "904053120350",
            "tags": {
              "Name": "dopamin-shop-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-igw",
              "Project": "dopamin-shop"
            },
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:loadbalancer/app/dopamin-shop-alb/2a4b37ae8c682713",
            "arn_suffix": "app/dopamin-shop-alb/2a4b37ae8c682713",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dopamin-shop-alb-1760463302.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:loadbalancer/app/dopamin-shop-alb/2a4b37ae8c682713",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dopamin-shop-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04434236a5fd5154c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d3804cb1a672747"
              },
              {
                "subnet_id": "subnet-069a1fa3a8dd8db6c"
              }
            ],
            "subnets": [
              "subnet-04d3804cb1a672747",
              "subnet-069a1fa3a8dd8db6c"
            ],
            "tags": {
              "Name": "dopamin-shop-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-alb",
              "Project": "dopamin-shop"
            },
            "vpc_id": "vpc-01d20e5f332d0c1f6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:listener/app/dopamin-shop-alb/2a4b37ae8c682713/89c0755545a0aa42",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:targetgroup/dopamin-shop-backend-tg/afc06b1fd2a02584",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:listener/app/dopamin-shop-alb/2a4b37ae8c682713/89c0755545a0aa42",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:loadbalancer/app/dopamin-shop-alb/2a4b37ae8c682713",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "dopamin-shop"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:targetgroup/dopamin-shop-backend-tg/afc06b1fd2a02584",
            "arn_suffix": "targetgroup/dopamin-shop-backend-tg/afc06b1fd2a02584",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:904053120350:targetgroup/dopamin-shop-backend-tg/afc06b1fd2a02584",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:904053120350:loadbalancer/app/dopamin-shop-alb/2a4b37ae8c682713"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dopamin-shop-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dopamin-shop-backend-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-backend-tg",
              "Project": "dopamin-shop"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09229ba270b817f2f",
            "association_id": "eipassoc-0a086970d2dde3717",
            "connectivity_type": "public",
            "id": "nat-083558fabe29134f8",
            "network_interface_id": "eni-0787136e0047df5e6",
            "private_ip": "10.0.0.111",
            "public_ip": "63.183.56.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d3804cb1a672747",
            "tags": {
              "Name": "dopamin-shop-nat"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-nat",
              "Project": "dopamin-shop"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:route-table/rtb-05f831a6db046978a",
            "id": "rtb-05f831a6db046978a",
            "owner_id": "904053120350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083558fabe29134f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dopamin-shop-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-private-rt",
              "Project": "dopamin-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:route-table/rtb-00706777b03ecde2c",
            "id": "rtb-00706777b03ecde2c",
            "owner_id": "904053120350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b82ed425804d271f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dopamin-shop-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-public-rt",
              "Project": "dopamin-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084bb74ce0f1e52f9",
            "route_table_id": "rtb-05f831a6db046978a",
            "subnet_id": "subnet-013cbf1b622112f28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0516810a91c91e525",
            "route_table_id": "rtb-05f831a6db046978a",
            "subnet_id": "subnet-0680bb1c1ba7578fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9327f4b2b4a1b2b",
            "route_table_id": "rtb-00706777b03ecde2c",
            "subnet_id": "subnet-04d3804cb1a672747"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002cd4df68abe963b",
            "route_table_id": "rtb-00706777b03ecde2c",
            "subnet_id": "subnet-069a1fa3a8dd8db6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:security-group/sg-04434236a5fd5154c",
            "description": "ALB - HTTP/HTTPS dis dunyadan kabul eder",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04434236a5fd5154c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dopamin-shop-alb-20260615134433264200000003",
            "name_prefix": "dopamin-shop-alb-",
            "owner_id": "904053120350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dopamin-shop-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-alb-sg",
              "Project": "dopamin-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:security-group/sg-06c18f3b852b40f6b",
            "description": "EC2 - Yalnizca ALB uzerinden FastAPI (8000) erisimi",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c18f3b852b40f6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "FastAPI (ALB uzerinden)",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04434236a5fd5154c"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "dopamin-shop-ec2-20260615134436264700000005",
            "name_prefix": "dopamin-shop-ec2-",
            "owner_id": "904053120350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dopamin-shop-ec2-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-ec2-sg",
              "Project": "dopamin-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:security-group/sg-0e5dd9198f6990f8c",
            "description": "RDS - Yalnizca EC2 backend PostgreSQL (5432) erisimi",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5dd9198f6990f8c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL (EC2 backend)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06c18f3b852b40f6b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dopamin-shop-rds-20260615134438788500000007",
            "name_prefix": "dopamin-shop-rds-",
            "owner_id": "904053120350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dopamin-shop-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-rds-sg",
              "Project": "dopamin-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:security-group/sg-043755fb7cdad743b",
            "description": "ElastiCache Redis - Yalnizca EC2 backend (6379) erisimi",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043755fb7cdad743b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis (EC2 backend)",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06c18f3b852b40f6b"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "dopamin-shop-redis-20260615134438788500000006",
            "name_prefix": "dopamin-shop-redis-",
            "owner_id": "904053120350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dopamin-shop-redis-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-redis-sg",
              "Project": "dopamin-shop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:subnet/subnet-013cbf1b622112f28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013cbf1b622112f28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904053120350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dopamin-shop-private-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-private-1",
              "Project": "dopamin-shop"
            },
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:subnet/subnet-0680bb1c1ba7578fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0680bb1c1ba7578fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904053120350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dopamin-shop-private-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-private-2",
              "Project": "dopamin-shop"
            },
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:subnet/subnet-04d3804cb1a672747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d3804cb1a672747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904053120350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dopamin-shop-public-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-public-1",
              "Project": "dopamin-shop"
            },
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:subnet/subnet-069a1fa3a8dd8db6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069a1fa3a8dd8db6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904053120350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dopamin-shop-public-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-public-2",
              "Project": "dopamin-shop"
            },
            "vpc_id": "vpc-01d20e5f332d0c1f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:904053120350:vpc/vpc-01d20e5f332d0c1f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf770e3664ee3503",
            "default_route_table_id": "rtb-058668c7efab8af64",
            "default_security_group_id": "sg-0c5e953eacbed5d0d",
            "dhcp_options_id": "dopt-053ca917e1b3b0e1c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d20e5f332d0c1f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058668c7efab8af64",
            "owner_id": "904053120350",
            "tags": {
              "Name": "dopamin-shop-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "dopamin-shop-vpc",
              "Project": "dopamin-shop"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}